--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,6 +7,10 @@
 <meta name="description" content="{{ .Params.Description }}" />
 {{- end }}
 
+<link rel="shortcut icon" type="image/png" href="/favicon-192x192.png">
+<link rel="shortcut icon" sizes="192x192" href="/favicon-192x192.png">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
 <title>
     {{ if .IsHome }}
     {{ site.Title }}
