--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,8 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, Roboto, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial,
+    Roboto, sans-serif;
   margin: auto;
   max-width: var(--main-width);
   padding-left: var(--main-padding);
@@ -90,10 +91,9 @@ code {
   font-feature-settings: "liga", "dlig";
   font-variant-ligatures: contextual;
   font-family: var(--font-family-code);
-  font-size: .9em;
+  font-size: 0.9em;
   line-height: 1.2rem;
 }
-
 
 .katex-display {
   overflow-x: auto;
@@ -154,38 +154,34 @@ footer {
 }
 
 footer a {
-  margin-left: .2rem;
-  margin-right: .2rem;
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
 }
 
 /* Posts list  */
 
 .post-line {
-  margin-bottom: .5rem;
-  display: flex;
-  align-items: baseline;
-}
-
-.tag-line {
-  margin-bottom: .5rem;
-  display: flex;
-  align-items: baseline;
+  margin-bottom: 2.5rem;
 }
 
 .post-line p {
   margin-top: 0rem;
-  margin-bottom: 0rem;
+  margin-bottom: 0.5rem;
+}
+
+.tag-line {
+  margin-bottom: 0.5rem;
+  display: flex;
+  align-items: baseline;
+}
+
+.line-summary {
+  color: var(--content-secondary);
 }
 
 .line-date {
   font-size: small;
   font-family: var(--font-family-code);
-  min-width: 120px;
-  max-width: 120px;
-  text-align: right;
-  padding-right: 1rem;
-  margin-top: 0rem;
-  margin-bottom: 0rem;
 }
 
 .line-title {
@@ -194,13 +190,6 @@ footer a {
 
 .tag-title {
   margin: 0;
-}
-
-.line-summary {
-  font-size: small;
-  margin-top: .2rem !important;
-  /* font-style: italic; */
-  color: var(--content-secondary);
 }
 
 .list-container {
@@ -217,16 +206,16 @@ footer a {
 
 .pagination-control {
   min-width: 3rem;
-  margin-left: .5rem;
-  margin-right: .5rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
   text-align: center;
   align-items: center;
 }
 
 .page-number {
   min-width: 3rem;
-  margin-left: .5rem;
-  margin-right: .5rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -238,7 +227,7 @@ footer a {
 
 .social-icons {
   padding: 12px 0;
-  margin-bottom: var(--social-icons-bottom-margin)
+  margin-bottom: var(--social-icons-bottom-margin);
 }
 
 .social-icons a {
@@ -263,11 +252,11 @@ footer a {
 
 .single-title {
   /* margin-top: 1rem; */
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .single-readtime {
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   color: var(--content-secondary);
 }
 
@@ -285,26 +274,26 @@ footer a {
 }
 
 .single-tags span {
-  margin-right: .3rem;
+  margin-right: 0.3rem;
 }
 
 /* Table of contents */
 
 .toc {
   font-size: var(--p-font-size);
-  line-height: calc(.9 * var(--p-line-height));
+  line-height: calc(0.9 * var(--p-line-height));
   margin-top: var(--toc-margin-top);
   margin-bottom: var(--toc-margin-bottom);
 }
 
 .toc ul {
-  margin-top: .1rem;
-  margin-bottom: .1rem;
+  margin-top: 0.1rem;
+  margin-bottom: 0.1rem;
 }
 
 .toc li {
-  margin-top: .1rem;
-  margin-bottom: .1rem;
+  margin-top: 0.1rem;
+  margin-bottom: 0.1rem;
 }
 
 /* Autonumbering */
@@ -336,7 +325,8 @@ footer a {
 }
 
 .autonumber h4:before {
-  content: counter(h2-counter) "." counter(h3-counter) "." counter(h4-counter) "\00a0\00a0";
+  content: counter(h2-counter) "." counter(h3-counter) "." counter(h4-counter)
+    "\00a0\00a0";
 }
 
 /* images */
@@ -404,7 +394,7 @@ figcaption {
 /* breadcrumbs */
 
 .breadcrumbs {
-  font-size: .8em;
+  font-size: 0.8em;
   margin-bottom: calc(-0.5 * var(--h1-margin-top));
 }
 
