--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,20 +1,13 @@
 {{/* Header */}}
 
 <div class="header">
-    <h1 class="header-title">{{ site.Title }}</h1>
+  <h1 class="header-title">{{ site.Title }}</h1>
 
-    <div class="flex">
-        {{ $currentPage := . }}
-
-        {{ with site.Params.menu }}
-        {{ range . }}
-        <p class="small {{ if eq .url $currentPage.Path }} bold {{end}}">
-            <a href="{{.url}}">
-                /{{.name }}
-            </a>
-        </p>
-        {{ end }}
-        {{ end }}
-    </div>
-
+  <div class="flex">
+    {{ $currentPage := . }} {{ with site.Params.menu }} {{ range . }}
+    <p class="{{ if eq .url $currentPage.Path }} bold {{end}}">
+      <a href="{{.url}}">{{.name }}</a>
+    </p>
+    {{ end }} {{ end }}
+  </div>
 </div>
