--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -1,91 +1,93 @@
 :root {
-    --main-width: 780px;
-    --main-padding: 1.4em;
-    --main-padding-bottom: 3rem;
+  --main-width: 780px;
+  --main-padding: 1.4em;
+  --main-padding-bottom: 3rem;
 
-    --caption-padding: calc(.25 * var(--main-padding));
+  --caption-padding: calc(0.25 * var(--main-padding));
 
-    /* header settings */
-    --header-top-gap: 2rem;
-    --header-bottom-gap: 1rem;
-    --header-menu-side-gap: .5rem;
-    --header-menu-top-gap: 1rem;
+  /* header settings */
+  --header-top-gap: 2rem;
+  --header-bottom-gap: 1rem;
+  --header-menu-side-gap: 1.5rem;
+  --header-menu-top-gap: 1rem;
 
-    /* Typography */
-    --h1-margin-top: 2rem;
-    --h1-margin-bottom: 1.5rem;
-    --h2-margin-top: 2rem;
-    --h2-margin-bottom: 1.5rem;
-    --hx-margin-top: 1.5rem;
-    --hx-margin-bottom: 1rem;
-    --p-margin-top: 1rem;
-    --p-margin-bottom: 1rem;
-    --code-margin-top: 2rem;
-    --code-margin-bottom: 2rem;
+  /* Typography */
+  --h1-margin-top: 2rem;
+  --h1-margin-bottom: 1.5rem;
+  --h2-margin-top: 2rem;
+  --h2-margin-bottom: 1.5rem;
+  --hx-margin-top: 1.5rem;
+  --hx-margin-bottom: 1rem;
+  --p-margin-top: 1rem;
+  --p-margin-bottom: 1rem;
+  --code-margin-top: 2rem;
+  --code-margin-bottom: 2rem;
 
-    --h1-font-size: 2em;
-    --h2-font-size: 1.8em;
-    --hx-font-size: 1.3em;
-    --p-font-size: 1em;
-    --p-line-height: 1.5em;
-    --caption-font-size: .8em;
+  --h1-font-size: 2em;
+  --h2-font-size: 1.8em;
+  --hx-font-size: 1.3em;
+  --p-font-size: 1em;
+  --p-line-height: 1.5em;
+  --caption-font-size: 0.8em;
 
-    --font-family-code: "Lucida Console", Monaco, "Consolas", "Liberation Mono", "DejaVu Sans Mono", "Ubuntu Mono", "Roboto Mono", "Source Code Pro", "Menlo", "Fira Code", monospace;
+  --font-family-code: "Lucida Console", Monaco, "Consolas", "Liberation Mono",
+    "DejaVu Sans Mono", "Ubuntu Mono", "Roboto Mono", "Source Code Pro", "Menlo",
+    "Fira Code", monospace;
 
-    /* List indentation */
-    --li-indent: 1.5rem;
-    --ul-margin-top: 1rem;
-    --ul-margin-bottom: 1rem;
+  /* List indentation */
+  --li-indent: 1.5rem;
+  --ul-margin-top: 1rem;
+  --ul-margin-bottom: 1rem;
 
-    --toc-margin-top: 2rem;
-    --toc-margin-bottom: 3rem;
+  --toc-margin-top: 2rem;
+  --toc-margin-bottom: 3rem;
 
-    /* Code */
-    --code-padding: 1.5rem;
-    --code-border-radius: 10px;
+  /* Code */
+  --code-padding: 1.5rem;
+  --code-border-radius: 10px;
 
-    /* Social section */
-    --social-icons-bottom-margin: 3rem;
+  /* Social section */
+  --social-icons-bottom-margin: 3rem;
 
-    /* Footer */
-    --footer-height: 3rem;
+  /* Footer */
+  --footer-height: 3rem;
 
-    /* Content */
-    --content-height: calc(100vh - var(--footer-height));
+  /* Content */
+  --content-height: calc(100vh - var(--footer-height));
 
-    /* Tables */
-    --table-cell-padding: .5rem;
-    --table-margin-top: 1.5rem;
-    --table-margin-bottom: 1.5rem;
+  /* Tables */
+  --table-cell-padding: 0.5rem;
+  --table-margin-top: 1.5rem;
+  --table-margin-bottom: 1.5rem;
 
-    /* Theme */
-    --content-primary: rgb(36, 36, 36);
-    --content-secondary: rgb(117, 117, 117);
-    --background: rgb(255, 255, 255);
-    --code-background: rgb(249, 249, 249);
-    --code-border: rgb(229, 229, 229);
+  /* Theme */
+  --content-primary: rgb(36, 36, 36);
+  --content-secondary: rgb(117, 117, 117);
+  --background: rgb(255, 255, 255);
+  --code-background: rgb(249, 249, 249);
+  --code-border: rgb(229, 229, 229);
 }
 
 .dark {
-    --content-primary: rgb(218, 218, 218);
-    --content-secondary: rgb(140, 140, 140);
-    --background: rgb(20, 20, 20);
-    --code-background: rgb(30, 30, 30);
-    --code-border: rgb(50, 50, 50);
+  --content-primary: rgb(218, 218, 218);
+  --content-secondary: rgb(140, 140, 140);
+  --background: rgb(20, 20, 20);
+  --code-background: rgb(30, 30, 30);
+  --code-border: rgb(50, 50, 50);
 }
 
 @media screen and (max-width: 1024px) {
-    :root {
-        --main-width: 750px;
-        --header-top-gap: 1rem;
-        --caption-padding: calc(.25 * var(--main-padding));
-    }
+  :root {
+    --main-width: 750px;
+    --header-top-gap: 1rem;
+    --caption-padding: calc(0.25 * var(--main-padding));
+  }
 }
 
 @media screen and (max-width: 640px) {
-    :root {
-        --header-top-gap: 1rem;
-        --social-icons-bottom-margin: 0rem;
-        --caption-padding: calc(2 * var(--main-padding));
-    }
+  :root {
+    --header-top-gap: 1rem;
+    --social-icons-bottom-margin: 0rem;
+    --caption-padding: calc(2 * var(--main-padding));
+  }
 }
