feat: h1 as headings when listing posts

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -185,6 +185,11 @@ footer a {
 
 .line-title {
   margin: 0;
+  font-size: 1.5rem;
+}
+
+.line-title a {
+  text-decoration: none;
 }
 
 .tag-title {
