feat: slicker footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,7 @@
 <p>
-  Powered by <a href="https://gohugo.io/">Hugo</a>
-  and
-  <a href="https://github.com/tomfran/typo">tomfran/typo</a> (via
-  <a href="https://github.com/sgruetter/typo">my fork</a>)
+  Powered by <a href="https://gohugo.io/">Hugo</a> and
+  <a href="https://github.com/tomfran/typo">tomfran/typo</a> via
+  <a href="https://github.com/sgruetter/typo">my fork</a>
 </p>
 
 {{ if .Param "math" }} {{ partialCached "math.html" . }} {{ end }}
