--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -69,7 +69,7 @@
   {{ if not (.Param "hideBackToTop") }}
   <div class="back-to-top">
     <a href="#top">
-      back to top
+      Back to top
     </a>
   </div>
   {{ end }}
