--- a/layouts/partials/head/js.html
+++ b/layouts/partials/head/js.html
@@ -1,7 +1,10 @@
-{{- with resources.Get "js/main.js" }}
-{{- $opts := dict "minify" true }}
-{{- with . | js.Build $opts | fingerprint }}
-<script src="{{ .RelPermalink }}" integrity="{{- .Data.Integrity }}"
-    crossorigin="anonymous"></script>
-{{- end }}
-{{- end }}
+{{- with resources.Get "js/main.js" }} {{- $opts := dict "minify" true }} {{-
+with . | js.Build $opts | fingerprint }}
+<script
+  src="{{ .RelPermalink }}"
+  integrity="{{- .Data.Integrity }}"
+  crossorigin="anonymous"
+></script>
+{{- end }} {{- end }}
+
+<script async defer src="https://rebeblog.twic.pics/?v1"></script>
