feat: add twic pics for image rendering, in production only

--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -18,7 +18,11 @@ and build the img class string as "img-tag1 img-tag2 ..."
 <figure class="{{ $classes }}">
 
     <div>
-        <img loading="lazy" alt="{{ .Text }}" src=" {{ $url }}">
+      {{ if hugo.IsProduction }}
+        <img loading="lazy" alt="{{ .Text }}" data-twic-src="{{ $url }}">
+      {{ else }}
+        <img loading="lazy" alt="{{ .Text }}" src="{{ $url }}">
+      {{ end }}
     </div>
 
     {{ with .Title }}
