--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -19,7 +19,7 @@ and build the img class string as "img-tag1 img-tag2 ..."
 
     <div>
       {{ if and hugo.IsProduction site.Params.twicPicsUrls }}
-        <img loading="lazy" alt="{{ .Text }}" data-twic-src="image:{{ .Page.Site.BaseURL }}{{ $url }}">
+        <img loading="lazy" alt="{{ .Text }}" data-twic-src="image:{{ $url }}">
       {{ else }}
         <img loading="lazy" alt="{{ .Text }}" src="{{ $url }}">
       {{ end }}
